[project]
name = "aleph"
version = "0.1.0"
description = "LLM-driven Semantic HNSW Index"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm",
    "openai",
    "vllm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
